--- a/FLASK_APP/templates/signin.html
+++ b/FLASK_APP/templates/signin.html
@@ -8,24 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/open-iconic-bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/animate.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/open-iconic-bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/animate.css') }}">
 
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/magnific-popup.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.carousel.min.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.theme.default.min.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/magnific-popup.css') }}">
 
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/aos.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/flaticon.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/aos.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/flaticon.css') }}">
 
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/ionicons.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/bootstrap-datepicker.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/jquery.timepicker.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/ionicons.min.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap-datepicker.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/jquery.timepicker.css') }}">
 
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/icomoon.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/style.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = '/css/extra.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/icomoon.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/extra.css') }}">
   </head>
   <body>
     <a name = "top"></a>
