--- a/FLASK_APP/templates/password.html
+++ b/FLASK_APP/templates/password.html
@@ -133,17 +133,17 @@
       </div>
     </footer>
 
-    <script src="{{url_for('static', filename = '/js/jquery.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery-migrate-3.0.1.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/popper.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/bootstrap.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery.easing.1.3.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery.waypoints.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery.stellar.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/owl.carousel.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery.magnific-popup.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/aos.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/jquery.animateNumber.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/scrollax.min.js') }}"></script>
-    <script src="{{url_for('static', filename = '/js/main.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery-migrate-3.0.1.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/popper.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.easing.1.3.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.waypoints.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.stellar.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/owl.carousel.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.magnific-popup.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/aos.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/jquery.animateNumber.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/scrollax.min.js') }}"></script>
+    <script src="{{url_for('static', filename = 'js/main.js') }}"></script>
 </body>
