--- a/FLASK_APP/templates/forgot.html
+++ b/FLASK_APP/templates/forgot.html
@@ -48,9 +48,9 @@
       <!-- <div class="overlay"></div> -->
       <div class="hero-wrap js-fullheight" data-stellar-background-ratio="0.5" id="slider">
           <figure>
-            <img src="{{url_for('static', filename = '/images/tollhead3.jpg')}}">
-            <img src="{{url_for('static', filename = '/images/tollheadd.jpg')}}">
-            <img src="{{url_for('static', filename = '/images/tollhead1.jpg')}}">
+            <img src="{{url_for('static', filename = 'images/tollhead3.jpg')}}">
+            <img src="{{url_for('static', filename = 'images/tollheadd.jpg')}}">
+            <img src="{{url_for('static', filename = 'images/tollhead1.jpg')}}">
           </figure>
         <div class="overlay">
           <div class="container">
