--- a/FLASK_APP/templates/signup.html
+++ b/FLASK_APP/templates/signup.html
@@ -115,6 +115,23 @@
 	              </div>
                 <div class="col-sm-6">
 	                <div class="form-group">
+	                  <input type="text" class="form-control" name="number_plate_four" placeholder="Fourth car number plate">
+	                </div>
+	              </div>
+                <div class="col-sm-6">
+	                <div class="form-group">
+			              <div class="select-wrap">
+                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                      <select name="carlicense" id="" class="form-control" required>
+                        <option value="" disabled selected>Car License</option>
+                        <option value="Where did you grow up?">Paid</option>
+                        <option value="Where did you grow up?">Not paid</option>
+                      </select>
+                    </div>
+			            </div>
+	              </div>
+                <div class="col-sm-6">
+	                <div class="form-group">
 	                  <input type="password" class="form-control"  name="password" placeholder="Password" required>
 	                </div>
 	              </div>
