--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -73,7 +73,7 @@
       </div>
     </section>
 
-    {% if nm == admin %}
+    {% if nm == Admin %}
       {% block content %}
         <section class="ftco-section ftco-no-pt ftco-no-pb">
           <div class="container-fluid px-0">
@@ -105,19 +105,17 @@
                             <th scope="row">25/07/2020</th>
                             <td>07:00</td>
                             <td>Pump was turned on</td>
-                          </tr>
-                          <tr>
-                        </tbody>
-                      </table>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
+        </section>
       {% endblock content %}
     {% else %}
       {% block content %}
@@ -157,6 +155,7 @@
         	</div>
         </section>
       {% endblock content %}
+    {% endif %}
 
 
     <footer class="ftco-footer ftco-section">
