--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -73,8 +73,8 @@
       </div>
     </section>
 
-    {% if nm == Admin %}
-      {% block content %}
+    <!-- {% if nm == Admin %}
+      {% block content %} -->
         <section class="ftco-section ftco-no-pt ftco-no-pb">
           <div class="container-fluid px-0">
             <div class="row no-gutters">
@@ -116,9 +116,9 @@
             </div>
           </div>
         </section>
-      {% endblock content %}
+      <!-- {% endblock content %}
     {% else %}
-      {% block content %}
+      {% block content %} -->
         <section class="ftco-section ftco-booking bg-light">
         	<div class="container ftco-relative">
         		<div class="row justify-content-center pb-3">
@@ -154,8 +154,8 @@
         		</div>
         	</div>
         </section>
-      {% endblock content %}
-    {% endif %}
+      <!-- {% endblock content %}
+    {% endif %} -->
 
 
     <footer class="ftco-footer ftco-section">
