--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -73,9 +73,33 @@
       </div>
     </section>
 
-    <!-- {% if nm == Admin %}
-      {% block content %} -->
-        <section class="ftco-section ftco-no-pt ftco-no-pb">
+    <section class="services-section ftco-section">
+      <div class="container">
+        <div class="row justify-content-center pb-3">
+          <div class="col-md-10 heading-section text-center ftco-animate">
+            <h2 class="mb-4">IoT in Transportation</h2>
+            <p>We Value Our Customers, Service Above Everything</p>
+          </div>
+        </div>
+        <div class="row no-gutters d-flex">
+          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="media-body">
+                <h3 class="heading mb-3">Balance</h3>
+                <p><h1> {{funds}}</h1></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="media-body">
+                <h3 class="heading mb-3">Car License</h3>
+                <p><h1>{{license}}</h1></p>
+              </div>
+            </div>
+          </div>
+
+        <!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
           <div class="container-fluid px-0">
             <div class="row no-gutters">
               <div class="col-md text-center d-flex align-items-stretch">
@@ -115,10 +139,8 @@
               </div>
             </div>
           </div>
-        </section>
-      <!-- {% endblock content %}
-    {% else %}
-      {% block content %} -->
+        </section> -->
+
         <section class="ftco-section ftco-booking bg-light">
         	<div class="container ftco-relative">
         		<div class="row justify-content-center pb-3">
