--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>AutoGate | Home</title>
+    <title>AutoGate | Dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -141,44 +141,41 @@
           </div>
         </section> -->
 
-        <section class="ftco-section ftco-booking bg-light">
-        	<div class="container ftco-relative">
-        		<div class="row justify-content-center pb-3">
-              <div class="col-md-10 heading-section text-center ftco-animate">
-              	<span class="subheading">Top Up</span>
-                <h2 class="mb-4">Load Money Into Your Account</h2>
-                <p>Automated TollGate Payment System</p>
+    <section class="ftco-section ftco-booking bg-light">
+    	<div class="container ftco-relative">
+    		<div class="row justify-content-center pb-3">
+          <div class="col-md-10 heading-section text-center ftco-animate">
+          	<span class="subheading">Top Up</span>
+            <h2 class="mb-4">Load Money Into Your Account</h2>
+            <p>Automated TollGate Payment System</p>
+          </div>
+        </div>
+        <h3 class="vr">Call Us: +263776433583</h3>
+    		<div class="row justify-content-center">
+    			<div class="col-md-10 ftco-animate">
+    				<form action="" class="appointment-form" method="post">
+	            <div class="row">
+	              <div class="col-sm-6">
+	                <div class="form-group">
+			              <input type="text" class="form-control" name="plate" placeholder="Number Plate" required>
+			            </div>
+	              </div>
+                <div class="col-sm-6">
+	                <div class="form-group">
+			              <input type="text" class="form-control" name="amount" placeholder="Amount" required>
+			            </div>
+	              </div>
+                <div class="col-sm-6">
+	                <div class="form-group">
+			              <input type="text" class="form-control" name="code" placeholder="Verification Code" required>
+			            </div>
+	              </div>
               </div>
-            </div>
-            <h3 class="vr">Call Us: +263776433583</h3>
-        		<div class="row justify-content-center">
-        			<div class="col-md-10 ftco-animate">
-        				<form action="" class="appointment-form" method="post">
-    	            <div class="row">
-    	              <div class="col-sm-6">
-    	                <div class="form-group">
-    			              <input type="text" class="form-control" name="plate" placeholder="Number Plate" required>
-    			            </div>
-    	              </div>
-                    <div class="col-sm-6">
-    	                <div class="form-group">
-    			              <input type="text" class="form-control" name="amount" placeholder="Amount" required>
-    			            </div>
-    	              </div>
-                    <div class="col-sm-6">
-    	                <div class="form-group">
-    			              <input type="text" class="form-control" name="code" placeholder="Verification Code" required>
-    			            </div>
-    	              </div>
-                  </div>
-                </form>
-        			</div>
-        		</div>
-        	</div>
-        </section>
-      <!-- {% endblock content %}
-    {% endif %} -->
-
+            </form>
+    			</div>
+    		</div>
+    	</div>
+    </section>
 
     <footer class="ftco-footer ftco-section">
       <div class="container">
