--- a/FLASK_APP/templates/signup.html
+++ b/FLASK_APP/templates/signup.html
@@ -124,8 +124,8 @@
                       <div class="icon"><span class="ion-ios-arrow-down"></span></div>
                       <select name="carlicense" id="" class="form-control" required>
                         <option value="" disabled selected>Car License</option>
-                        <option value="Where did you grow up?">Paid</option>
-                        <option value="Where did you grow up?">Not paid</option>
+                        <option value="Paid">Paid</option>
+                        <option value="Not Paid">Not paid</option>
                       </select>
                     </div>
 			            </div>
