--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -73,6 +73,14 @@
           <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="media-body">
+                <h3 class="heading mb-3"></h3>
+                <p><h1></h1></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="media-body">
                 <h3 class="heading mb-3">Balance</h3>
                 <p><h1> {{funds}}</h1></p>
               </div>
