--- a/FLASK_APP/templates/scan.html
+++ b/FLASK_APP/templates/scan.html
@@ -65,7 +65,7 @@
       	<div class="row justify-content-center pb-3">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<span class="subheading">Dashboard</span>
-            <h2 class="mb-4">Welcome {{nm}} ...</h2>
+            <h2 class="mb-4">Scan Number Plate</h2>
             <p>Automated TollGate Payment System</p>
           </div>
         </div>
