--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -172,6 +172,9 @@
   			              <input type="text" class="form-control" name="code" placeholder="Verification Code" required>
   			            </div>
   	              </div>
+                  <div class="form-group">
+    	              <input type="submit" value="Sign Up" class="btn btn-primary">
+    	            </div>
                 </div>
               </form>
       			</div>
