Added camera streaming-test

--- a/FLASK_APP/templates/scan.html
+++ b/FLASK_APP/templates/scan.html
@@ -66,7 +66,9 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<span class="subheading">Dashboard</span>
             <h2 class="mb-4">Scan Number Plate</h2>
-            <p>Automated TollGate Payment System</p>
+            <p>
+              <img src="/video-feed">
+            </p>
           </div>
         </div>
       </div>
