--- a/FLASK_APP/templates/scan.html
+++ b/FLASK_APP/templates/scan.html
@@ -68,6 +68,7 @@
             <h2 class="mb-4">Scan Number Plate</h2>
             <p>
               <img src="/video-feed">
+              <button>scan</button>
             </p>
           </div>
         </div>
