Added few endpoint handlers

--- a/FLASK_APP/templates/scan.html
+++ b/FLASK_APP/templates/scan.html
@@ -68,7 +68,8 @@
             <h2 class="mb-4">Scan Number Plate</h2>
             <p>
               <img src="/video-feed">
-              <button>scan</button>
+              <br>
+              <button onclick="scanCarPlate()" class="btn btn-primary">scan</button>
             </p>
           </div>
         </div>
