--- a/FLASK_APP/templates/signup.html
+++ b/FLASK_APP/templates/signup.html
@@ -100,36 +100,10 @@
 	              </div>
 	              <div class="col-sm-6">
 	                <div class="form-group">
-	                  <input type="text" class="form-control" name="number_plate_one" placeholder="First car number plate" required>
+	                  <input type="text" class="form-control" name="car_plate" placeholder="First car number plate" required>
 	                </div>
 	              </div>
-                <div class="col-sm-6">
-	                <div class="form-group">
-	                  <input type="text" class="form-control" name="number_plate_two" placeholder="Second car number plate">
-	                </div>
-	              </div>
-                <div class="col-sm-6">
-	                <div class="form-group">
-	                  <input type="text" class="form-control" name="number_plate_three" placeholder="Third car number plate">
-	                </div>
-	              </div>
-                <div class="col-sm-6">
-	                <div class="form-group">
-	                  <input type="text" class="form-control" name="number_plate_four" placeholder="Fourth car number plate">
-	                </div>
-	              </div>
-                <div class="col-sm-6">
-	                <div class="form-group">
-			              <div class="select-wrap">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="carlicense" id="" class="form-control" required>
-                        <option value="" disabled selected>Car License</option>
-                        <option value="Paid">Paid</option>
-                        <option value="Not Paid">Not paid</option>
-                      </select>
-                    </div>
-			            </div>
-	              </div>
+
                 <div class="col-sm-6">
 	                <div class="form-group">
 	                  <input type="password" class="form-control"  name="password" placeholder="Password" required>
@@ -140,27 +114,8 @@
 	                  <input type="password" class="form-control" name="confirm" placeholder="Re-Enter Password" required>
 	                </div>
 	              </div>
-	              <div class="col-sm-6">
-	                <div class="form-group">
-			              <div class="select-wrap">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="question" id="" class="form-control" required>
-                        <option value="" disabled selected>Choose a  security question</option>
-                      	<option value="What is your favourite book?">What is your favourite book?</option>
-                        <option value="Where did you grow up?">Where did you grow up?</option>
-                        <option value="What is your mother's maiden name?">What is your mother's maiden name?</option>
-                        <option value="Where did you go to high school?">Where did you go to high school?</option>
-                      </select>
-                    </div>
-			            </div>
-	              </div>
-	              <div class="col-sm-6">
-	                <div class="form-group">
-	                  <input type="text" class="form-control" name="answer" placeholder="Answer to security question" required>
-	                </div>
-	              </div>
+	             
 		          </div>
-              <p id="chexbox"><span><input type="checkbox" required></span>I agree to the terms and conditions</p>
 		          <div class="form-group">
 	              <input type="submit" value="Sign Up" class="btn btn-primary">
 	            </div>
