--- a/FLASK_APP/templates/welcome.html
+++ b/FLASK_APP/templates/welcome.html
@@ -155,26 +155,23 @@
           <h3 class="vr">Call Us: +263776433583</h3>
       		<div class="row justify-content-center">
       			<div class="col-md-10 ftco-animate">
-      				<form action="" class="appointment-form" method="post">
+      				<form action="/add-funds" class="appointment-form" method="post">
   	            <div class="row">
-  	              <div class="col-sm-6">
-  	                <div class="form-group">
-  			              <input type="text" class="form-control" name="plate" placeholder="Number Plate" required>
-  			            </div>
-  	              </div>
                   <div class="col-sm-6">
   	                <div class="form-group">
-  			              <input type="text" class="form-control" name="amount" placeholder="Amount" required>
+  			              <input type="number" class="form-control" name="amount" placeholder="Amount" required>
   			            </div>
   	              </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-3">
   	                <div class="form-group">
-  			              <input type="text" class="form-control" name="code" placeholder="Verification Code" required>
+  			              <input type="text" class="form-control" name="verification_code" placeholder="Verification Code" required>
   			            </div>
   	              </div>
-                  <div class="form-group">
-    	              <input type="submit" value="Sign Up" class="btn btn-primary">
-    	            </div>
+                  <div class="col-sm-3">
+                    <div class="form-group">
+      	              <input type="submit" value="ADD" class="btn btn-primary">
+      	            </div>
+                  </div>
                 </div>
               </form>
       			</div>
