created middlewares and few helpers over the weekend

--- a/FLASK_APP/templates/user_dashboard.html
+++ b/FLASK_APP/templates/user_dashboard.html
@@ -65,7 +65,7 @@
       	<div class="row justify-content-center pb-3">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<span class="subheading">Dashboard</span>
-            <h2 class="mb-4">Welcome {{nm}} ...</h2>
+            <h2 class="mb-4">Welcome {{ name }} ...</h2>
             <p>Automated TollGate Payment System</p>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="media block-6 services d-block text-center">
               <div class="media-body">
                 <h3 class="heading mb-3">Balance</h3>
-                <p><h1> {{funds}}</h1></p>
+                <p><h1> ${{funds}}</h1></p>
               </div>
             </div>
           </div>
