--- a/FLASK_APP/templates/error.html
+++ b/FLASK_APP/templates/error.html
@@ -75,7 +75,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<span class="subheading">ERROR</span>
             <div class="alert-message">
-              <h2 class="mb-4">{{messagess}}</h2>
+              <h2 class="mb-4">{{error_msg}}</h2>
             </div>
             <p>Automated TollGate Payment System</p>
           </div>
