--- a/FLASK_APP/templates/signin.html
+++ b/FLASK_APP/templates/signin.html
@@ -80,16 +80,16 @@
         <h3 class="vr">Call Us: +263776433583</h3>
     		<div class="row justify-content-center">
     			<div class="col-md-10 ftco-animate">
-    				<form action="{{url_for('welcome')}}" class="appointment-form" method="post">
+    				<form action="" class="appointment-form" method="post">
 	            <div class="row">
 	              <div class="col-sm-6">
 	                <div class="form-group">
-			              <input type="email" class="form-control" name="username" placeholder="E-mail Address">
+			              <input type="email" class="form-control" name="email" placeholder="E-mail Address">
 			            </div>
 	              </div>
 	              <div class="col-sm-6">
 	                <div class="form-group">
-			              <input type="password" class="form-control" name="pword" placeholder="Password">
+			              <input type="password" class="form-control" name="password" placeholder="Password">
 			            </div>
 	              </div>
 		          </div>
