commited code with working signin, add funds, pay for car license, approving of funds

--- a/FLASK_APP/static/css/style.css
+++ b/FLASK_APP/static/css/style.css
@@ -9864,3 +9864,15 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+
+
+/* EXTRA STYLES */
+.center, .center-align {
+  text-align: center;
+}
+
+.valign-wrapper, .valign {
+  display: flex;
+  align-items: center;
+}
