--- a/FLASK_APP/templates/admin-dashboard.html
+++ b/FLASK_APP/templates/admin-dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>AutoGate | Home</title>
+    <title>AutoGate | Admin Dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/icomoon.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/extra.css') }}">
+    <link rel="stylesheet" type="text/css" href="/static/st">
   </head>
   <body>
     <a name = "top"></a>
@@ -36,52 +37,69 @@
           <span class="oi oi-menu"></span> Menu
         </button>
 
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="#" class="nav-link">Error</a></li>
-            <li class="nav-item"><a href="{{url_for('index')}}" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="{{url_for('signin')}}" class="nav-link">Sign In</a></li>
-        </div>
-      </div>
-    </nav>
 
-    <section >
-      <!-- <div class="overlay"></div> -->
-      <div class="hero-wrap js-fullheight" data-stellar-background-ratio="0.5" id="slider">
-          <figure>
-            <img src="{{url_for('static', filename = 'images/tollhead3.jpg')}}">
-            <img src="{{url_for('static', filename = 'images/tollheadd.jpg')}}">
-            <img src="{{url_for('static', filename = 'images/tollhead1.jpg')}}">
-          </figure>
-        <div class="overlay">
-          <div class="container">
-            <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-              <div class="col-lg-12 ftco-animate d-flex align-items-center">
-                <div class="text text-center">
-                  <span class="subheading">Welcome to AutoGate</span>
-                  <h1 class="mb-4">Automated TollGate<br> Payment System </h1>
-                  <p><a href="{{url_for('signup')}}" class="btn btn-primary btn-outline-primary px-4 py-2">Join now</a></p>
-                </div>
-              </div>
-            </div>
+	      <div class="collapse navbar-collapse" id="ftco-nav">
+	        <ul class="navbar-nav ml-auto">
+	        	<li class="nav-item active"><a href="#" class="nav-link">Dashboard</a></li>
+	        	<li class="nav-item"><a href="{{url_for('signin')}}" class="nav-link">Log Out</a></li>
+	      </div>
+	    </div>
+	  </nav>
+
+    <section class="hero-wrap js-fullheight" style="background-image: url(static/images/welcome.png);" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
+          <div class="col-lg-12 ftco-animate d-flex align-items-center">
+          	<div class="text text-center">
+          		<span class="subheading">Welcome to AutoGate</span>
+  	  				<h1 class="mb-4">Admin Dashboard</h1>
+  	  				<p>Automated TollGate Payment System</p>
+  					</div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="ftco-section ftco-booking bg-light">
-    	<div class="container ftco-relative">
-    		<div class="row justify-content-center pb-3">
-          <div class="col-md-10 heading-section text-center ftco-animate">
-          	<span class="subheading">ERROR</span>
-            <div class="alert-message">
-              <h2 class="mb-4">{{error_msg}}</h2>
-            </div>
-            <p>Automated TollGate Payment System</p>
-          </div>
-        </div>
-        <h3 class="vr">Call Us: +263776433583</h3>
-    	</div>
+    <section class="ftco-section center-align" style="padding: 0;">
+
+          <h4 class="center-align">PAYMENTS</h4>
+        <table class="table table-striped">
+
+        		<thead>
+        			<tr>
+        				<th>DEPOSITER</th>
+        				<th>AMOUNT</th>
+        				<th>TIME</th>
+        				<th></th>
+        			</tr>
+        		</thead>
+
+        		<tbody>
+		       {% for payment in payments %}
+		         
+		       	<tr>
+		       		<td>{{ payment["depositer"]["name"] }}</td>
+		       		<td>{{ payment["amount"] }}</td>
+		       		<td>{{ payment["time"] }}</td>
+		       		<td>
+		       			<form action="/approve-payment" method="POST" style="display: inline;">
+		       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
+		       				<input type="submit" value="APPROVE" class="btn btn-primary">
+		       			</form>
+		       			<form action="/remove-payment" method="POST" style="display: inline;">
+		       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
+		       				<input type="submit" value="REMOVE" class="btn btn-secondary">
+		       			</form>
+		       		</td>
+		       	</tr>
+
+		       {% endfor %}
+		      </tbody>
+
+        </table>
+        </tbody>
+      </table>
     </section>
 
     <footer class="ftco-footer ftco-section">
@@ -127,11 +145,6 @@
 	            </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- loader -->
-          <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
         </div>
       </div>
     </footer>
