--- a/FLASK_APP/templates/signup.html
+++ b/FLASK_APP/templates/signup.html
@@ -37,7 +37,7 @@
 	              <input type="text" class="form-control" name="surname" placeholder="Surname" required>
 	            </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
               <div class="form-group">
                 <input type="email" class="form-control" name="email" placeholder="E-mail Address" required>
               </div>
@@ -45,6 +45,16 @@
             <div class="col-sm-6">
               <div class="form-group">
                 <input type="text" class="form-control" name="car_plate" placeholder="First car number plate" required>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="form-group">
+                <select name="car_type" placeholder="Car type" required>
+                  <option type="select" value="" selected disabled>Select car type</option>
+                  <option value="family_car">Family car</option>
+                  <option value="heavy_vehicle">Heavy vehicle</option>
+                </select>
               </div>
             </div>
 
