--- a/FLASK_APP/templates/base.html
+++ b/FLASK_APP/templates/base.html
@@ -34,9 +34,6 @@
   </head>
   <body>
 
-    <script type="text/javascript">
-
-    </script>
     <a name = "top"></a>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" style="background: rgba(0,0,0, 0.5) !important;">
       <div class="container" style="background: rgba(0,0,0, 0.5) !important;">
@@ -123,5 +120,7 @@
       <script src="{{url_for('static', filename = 'js/aos.js') }}"></script>
       <script src="{{url_for('static', filename = 'js/jquery.animateNumber.min.js') }}"></script>
       <script src="{{url_for('static', filename = 'js/scrollax.min.js') }}"></script>
+      <script src="{{url_for('static', filename = 'js/socket.io-4.1.0.js') }}"></script>
       <script src="{{url_for('static', filename = 'js/main.js') }}"></script>
+
   </body>
