removed autoscan popups

--- a/FLASK_APP/templates/scan.html
+++ b/FLASK_APP/templates/scan.html
@@ -102,9 +102,9 @@
 
 		const socket = io('/scan');
 
-		socket.on('notice', function(message) {
-			alert(message);
-		});
+		// socket.on('notice', function(message) {
+		// 	alert(message);
+		// });
 
 		socket.on('unrecognized_number_plate', function(number_plate) {
 			window.unrecognized_number_plate = number_plate;
